--- a/osa4/package.json
+++ b/osa4/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
+    "express-async-errors": "^3.1.1",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
