--- a/osa4/package.json
+++ b/osa4/package.json
@@ -19,10 +19,13 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "bcrypt": "^5.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "express-async-errors": "^3.1.1",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose-unique-validator": "^4.0.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   },
