--- a/osa4_backend/package.json
+++ b/osa4_backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "start:test": "NODE_ENV=test nodemon index.js"
   },
   "author": "",
   "license": "ISC",
