--- a/osa5/package.json
+++ b/osa5/package.json
@@ -11,9 +11,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "dev": "react-scripts start --host",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
+    "cypress:open": "cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,13 +43,14 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003",
+  "proxy": "http://localhost:3003/",
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "cypress": "^13.1.0",
     "eslint-plugin-jest": "^24.7.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest-environment-jsdom": "^29",
