--- a/osa5/package.json
+++ b/osa5/package.json
@@ -16,6 +16,7 @@
     "build": "react-scripts build",
     "test": "jest",
     "cypress:open": "cypress open",
+    "test:e2e": "cypress run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
